# SASCA-ReSA

./: CMakeLists.txt  README.md
docs/: README.md  default_experiment.ini
includes/: abm.h  graph.h
src/: abm.cpp  graph.cpp  main.cpp
